# equi-swap

./: README.md
dex_backend/: Cargo.toml
dex_backend/src/: main.rs
dex_backend/src/api/: api_routes.rs  mod.rs
dex_backend/src/api_methods/: get_random_helius_rpc.rs  handle_history.rs  jito.rs  mod.rs  search_tokens.rs  wallet_data.rs
dex_backend/src/cache/: mod.rs  token_cache.rs
dex_backend/src/rpc/: mod.rs  spawn_rpc_health_checker.rs
dex_backend/src/server/: create_server.rs  mod.rs  start_server.rs
dex_front/: .env  index.html  package-lock.json  package.json  vite.config.ts
dex_front/src/: index.css  main.tsx
dex_front/src/components/ui/: dialog.tsx  tabs.tsx
dex_front/src/data/: token-list.ts  top-tokens.ts
dex_front/src/features/settings/: Settings.tsx
dex_front/src/features/settings/components/: mode-toggle.tsx
dex_front/src/features/swap/: Swap.tsx
dex_front/src/features/swap/components/: Header.tsx  PriceChart.tsx  SolWsolBalance.tsx  SwapButton.tsx  SwapSettings.tsx  TokenInputSection.tsx  TokenSelector.tsx  WrapUnwrapSOLModal.tsx
dex_front/src/features/swap/hooks/: useHandleSwapClick.ts  useHandleSwapClick.tsx  useSwapSettings.ts  (+3 more)
dex_front/src/features/wallet/: Wallet.tsx
dex_front/src/hooks/: useMediaQuery.ts
dex_front/src/layout/: NewTab.tsx  TabbedLayout.tsx
dex_front/src/lib/: i18n.ts
dex_front/src/stores/: settingsStore.ts  swap-ui.ts  token-balances.ts  transactionsStore.ts  wallet-ui.ts
dex_front/src/types/: chart.ts  form.ts  index.ts  token.ts  transaction.ts  ui.ts  wallet.ts
k6_tests/: main.js
ws/: ws.js
(+16 files in other folders)
