[package]
name = "dex_backend"
version = "0.0.1"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "hickory-dns", "gzip", "brotli","blocking"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
solana-sdk = "2.1.5"
base64 = "0.22.1"
argon2 = "0.5.3"
bincode = "1.3.3"
borsh = "1.5.3"
serde = { version = "1.0.215", features = ["derive"] }
rayon = "1.10.0"
spl-token = "7.0.0"
solana-client = "2.1.5"
solana-instruction = "2.1.12"
futures = "0.3.31"
dotenv = "0.15"
solana-rpc-client = "2.1.5"
warp-sessions = "1.0.19"
warp = "0.3.7"
solana-transaction-status-client-types = "2.1.5"
anyhow = "1"
solana-transaction-status = "2.2.7"
log = "0.4"
env_logger = "0.10"
rand = "0.8.5"
mpl-token-metadata = "5.1.0"
dashmap = "5.5.3"
solana-account-decoder = "2.2.7"
chrono = "0.4.41"
